Fixade lite på den men itne klar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Maven+Pro|Sansita" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
+
   </head>
 
   <body>
@@ -29,6 +31,21 @@
       <h3 id="hjälp"> SMS:a HjälpFonden på 72 901    HUM100=100:-   HUM50=50:- </h3>
 
   	</div>
+
+    <div id ="main">
+
+      <nav class="navbar navbar-inverse navbar>
+        <div class="container-fluid">
+          <div class="navbar-header">
+          </div>
+            <ul class="nav navbar-nav">
+              <li class="navbarsize"><a class="navcolor" href="#hem">Hem</a></li>
+              <li class="navbarsize"><a class="navcolor" href="#first">Vår Hjälp</a></li>
+              <li class="navbarsize"><a class="navcolor" href="#second">Ditt Stöd</a></li>
+              <li class="navbarsize"><a class="navcolor" href="#third">Nyheter</a></li>
+            </ul>
+        </div>
+      </nav>
 
   	
 	<div id="bg">
