--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   	
 	<div id="bg">
 		
-		<h1>Vem hjälper du idag?</h1>
-		<h2>Genom HumanistHjälpen kan du särskilt hjälpa kvinnor och barn som utsätts för våld och förtryck. Barnäktenskap, förföljelser, hedersvåld, uteslutning från familj och samhälle, häxanklagesler, misshandel... Du kan rädda medmänniskor till både liv och hälsa samt bidra till att skapa opinion.
+		<h1 id="titel">Vem hjälper du idag?</h1>
+		<h2 id="txt">Genom HumanistHjälpen kan du särskilt hjälpa kvinnor och barn som utsätts för våld och förtryck. Barnäktenskap, förföljelser, hedersvåld, uteslutning från familj och samhälle, häxanklagesler, misshandel... Du kan rädda medmänniskor till både liv och hälsa samt bidra till att skapa opinion.
 		</h2>
 
   	</div>
