--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   		<img src="Logga.gif">
 
-      <h3 id="hjälp"> SMS:a HjälpFonden på 72 901    HUM100=100:-   HUM50=50:- </h3>
+      <h3 id="hjälp"> SMS:a HjälpFonden på 72 901 </br>  HUM100=100:- </br>  HUM50=50:- </h3>
 
   	</div>
 
