Klar med scalen

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
     <div id ="main">
 
-      <nav class="navbar navbar-inverse navbar>
+      <nav class="navbar navbar-inverse navbar">
         <div class="container-fluid">
           <div class="navbar-header">
           </div>
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav" id="ul1">
               <li class="navbarsize"><a class="navcolor" href="#hem">Hem</a></li>
               <li class="navbarsize"><a class="navcolor" href="#first">Vår Hjälp</a></li>
               <li class="navbarsize"><a class="navcolor" href="#second">Ditt Stöd</a></li>
@@ -51,10 +51,15 @@
 	<div id="bg">
 		
 		<h1 id="titel">Vem hjälper du idag?</h1>
-		<h2 id="txt">Genom HumanistHjälpen kan du särskilt hjälpa kvinnor och barn som utsätts för våld och förtryck. Barnäktenskap, förföljelser, hedersvåld, uteslutning från familj och samhälle, häxanklagesler, misshandel... Du kan rädda medmänniskor till både liv och hälsa samt bidra till att skapa opinion.
+		<h2 id="txt">Genom HumanistHjälpen kan du särskilt hjälpa kvinnor och barn som utsätts för våld och förtryck. Barnäktenskap, förföljelser, hedersvåld, uteslutning från familj och samhälle,  häxanklagesler, misshandel... Du kan rädda medmänniskor till både liv och hälsa samt bidra till att skapa opinion.
 		</h2>
 
-  	</div>
+    <center>
+      <img src="mammaBarn.jpg" id="underBild" align="middle">
+    </center>
+
+
+  </div>
 
 
   </body>
