--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
     <div id ="main">
 
-      <nav class="navbar navbar-inverse navbar">
+      <nav id="nav_bar" class="navbar navbar-inverse navbar">
         <div class="container-fluid">
           <div class="navbar-header">
           </div>
             <ul class="nav navbar-nav" id="ul1">
-              <li class="navbarsize"><a class="navcolor" href="#hem">Hem</a></li>
+              <li class="navbarsize"><a class="navcolor" href="#hem" >Hem</a></li>
               <li class="navbarsize"><a class="navcolor" href="#first">Vår Hjälp</a></li>
               <li class="navbarsize"><a class="navcolor" href="#second">Ditt Stöd</a></li>
               <li class="navbarsize"><a class="navcolor" href="#third">Nyheter</a></li>
@@ -58,8 +58,25 @@
       <img src="mammaBarn.jpg" id="underBild" align="middle">
     </center>
 
+    <h1 id="pictureheader">Här kan du hjälpa idag</h1>
+
+      <div class="flex-container">
+        <div class="flex-item">
+          <img class="bilder3" src="indexFond.jpg">
+          <p id="text">HjälpFonden kan sända avgörande hjälp snabbt dit den gör bäst nytta ute i världen. Även i Sverige finns stora behov. Din hjälp behövs även här!</p></div>
+        <div class="flex-item">
+          <img class="bilder3" src="barnPlakat.jpg">
+          <p id="text">Barn i Nigeria påstås vara häxor och trollkarlar. Barnen fördrivs från hem och samhälle, misshandlas och torteras. Hjälp oss stoppa förföljelserna!</p></div>
+        <div class="flex-item">
+          <img class="bilder3" src="mataIndex.jpg">
+          <p id="text">I Marocko kan mammor och barn jagas från hem och samhälle, om inte mamman är gift. De tvingas leva under hedershot och våld. Din gåva räddar liv.</p></div>  
+    </div>
 
   </div>
+
+    <div id="footer">
+      <h3 id="foottxt"> Insamlingsstiftelsen HumanistHjälpen - Humanist Aid Sweden - kansli@humanisthjalpen.se </h3>
+    </div>
 
 
   </body>
