--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
   	<div id="loggadiv">
 
-  		<img src="Logga.gif">
-
       <h3 id="hjälp"> SMS:a HjälpFonden på 72 901 </br>  HUM100=100:- </br>  HUM50=50:- </h3>
+
+  		<img id="logga" src="Logga.gif">
 
   	</div>
 
