--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
   	<div id="loggadiv">
 
       <h3 id="hjälp"> SMS:a HjälpFonden på 72 901 </br>  HUM100=100:- </br>  HUM50=50:- </h3>
-
-  		<img id="logga" src="Logga.gif">
+      
+      <a href="file:///C:/Users/emka15/Google%20Drive/Webutvecklin%20g/F%C3%B6rb%C3%A4ttrad%20Hemisda/index.html">
+        <img id="logga" src="Logga.gif">
+      </a>
 
   	</div>
 
