--- a/Var_Hjalp.html
+++ b/Var_Hjalp.html
@@ -39,7 +39,7 @@
       <nav id="nav_bar" class="navbar navbar-inverse navbar">
         <div class="container-fluid">   
           <ul class="nav navbar-nav ul1">
-            <li class="navbarsize"><a class="navcolor" href="#hem">Hem</a></li>
+            <li class="navbarsize"><a class="navcolor" href="file:///C:/Users/emka15/Google%20Drive/Webutvecklin%20g/F%C3%B6rb%C3%A4ttrad%20Hemisda/index.html">Hem</a></li>
             <li class="navbarsize"><a class="navcolor" href="#first">Vår Hjälp</a></li>
             <li class="navbarsize"><a class="navcolor" href="#second">Ditt Stöd</a></li>
             <li class="navbarsize"><a class="navcolor" href="#third">Nyheter</a></li>
